--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beyond the Shadows</title>
+    <title>Beyond the Shadows-about</title>
     <link rel="stylesheet" href="style.css"
   
 </head>
@@ -14,17 +14,14 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="archive.html">Archive</a></li>
+            <li><a href="">Gallery</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
     <main>
-        <div class="card">
-            <h2>Haunted Locations</h2>
-            <img src="" alt="">
-            <p></p>
-            <a href="posts/hauntedlocations.html" class="button">Learn More</a>
-        </div> 
+<h2>what are we about</h2>
+<p>Ghostly Ground is a blog about anything paranormal or this we can't explain. </p>
+
     </main>
 
     <footer>
@@ -32,4 +29,3 @@
     </footer>
 </body>
 </html>
-
