--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
     <main>
         <div class="card">
-            <h2>Haunted Locations</h2>
+            <h2>Haunted Locations in Utah</h2>
             <img src="" alt="">
             <p></p>
             <a href="posts/hauntedlocations.html" class="button">Learn More</a>
