--- a/archive.html
+++ b/archive.html
@@ -12,9 +12,9 @@
     <p class = motto>Explore the mysterious and eerie world of supernatural phenomena</p>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="">Gallery</a></li>
+            <li><a href="/index.html">Home</a></li>
+            <li><a href="/about.html">About</a></li>
+            <li><a href="/archive.html">Archive</a></li>
             <li><a href="">Contact</a></li>
         </ul>
     </nav>
